# godot-simple-voip

./: .gitignore  .gitmodules  default_bus_layout.tres  export_presets.cfg  icon.svg.import  project.godot  test.tscn  voip_icon.png.import
.github/: copilot-instructions.md
.github/workflows/: release-addon.yml
addons/godot_simple_voip/: README.md  audio_stream_player_voip.gd  audio_stream_player_voip.gd.uid  audio_stream_voip.gd  audio_stream_voip.gd.uid  audio_stream_voip_playback.gd  audio_stream_voip_playback.gd.uid  icon.svg.import  multiplayer_voip.gd  multiplayer_voip.gd.uid  plugin.cfg  simple_voip.gd  simple_voip.gd.uid  simple_voip.gdextension  simple_voip.gdextension.uid  voip_singleton.gd  voip_singleton.gd.uid
demo/: main.gd  main.gd.uid  main.tscn  main_generator.gd  main_generator.gd.uid  main_generator.tscn  opus_loopback.gd  opus_loopback.gd.uid  opus_loopback.tscn
rust/: Cargo.toml
rust/src/: audio_stream_voip.rs  deep_filter_net_audio_effect.rs  lib.rs  noise_gate_audio_effect.rs  opus_codec.rs  resampler.rs  rnnoise_audio_effect.rs
src/src/: deep_filter_audio_effect.rs  lib.rs
