[package]
name = "simple_voip" # Part of dynamic library name; we use {YourCrate} placeholder.
version = "0.1.0"     # You can leave version and edition as-is for now.
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = {version = "0.3.4", features = ["experimental-threads", "register-docs"]}
nnnoiseless = "0.5.1"
opus = "0.3.0"
ndarray = "0.15"
deep_filter = { path = "./DeepFilterNet/libDF", default-features = false, features = ["tract", "default-model-ll", "logging"] }
ringbuf = "0.4"